--- a/css/style.css
+++ b/css/style.css
@@ -4,20 +4,14 @@
     box-sizing: border-box;
   }
   
-  html, body {
-    height: 100%;
-  }
-  
   body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+    height: 100vh;
   }
   
-  img {
-    width: 50%;
-  }
+main {
+    display: flex;
+    justify-content: center
+}
 
   @import url('https://fonts.googleapis.com/css2?family-Poppins');
 
